# crazyfliecvo

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml
include/: cvo_server.h  cvo_service.h  quad_wp_manager.h
include/ekf/: ekf.h  ekf_ros.h  meas.h  state.h
launch/: commander.launch
msg/: xhat.msg
params/: cf_quad.yaml  cvo.yaml  ekf_gains.yaml  quadrotor1.yaml
scripts/: animation.py  cvo_gekko.py  cvo_server.py  gen_kalman_filter.py  params.py  plot_bag.py  pose_updater.py  quad_wp_manager.py  swarm_cvo.py  test_cvo_server.py
src/: cvo_server.cpp  quad_wp_manager.cpp
src/ekf/: dynamics.cpp  ekf.cpp  ekf_ros.cpp  log.cpp  meas.cpp  state.cpp
srv/: add_subscriber.srv  cvo.srv
