<?xml version="1.0"?>
<package format="2">
  <name>crazyflie</name>
  <version>0.1.3</version>
  <description>Crazyflie workspace with optitrack.</description>

  <maintainer email="jaronce@byu.edu">Jaron Ellingson</maintainer>

  <author>Jaron Ellingson</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <depend>eigen</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
